@@ -2,7 +2,8 @@
 Version 0.7-10 (??-05-2012, Rev. 1???)
 =====================================
 
-- 
+- New self test function doUnitTestsForGMCP to check whether
+  the R unit test suite for gMCP can complete without errors.
 
 Version 0.7-9 (07-05-2012, Rev. 1277)
 =====================================
